fixed get all employees
